Update Modified Saffir Simpson Hurricane Wind Scale.html

--- a/Modified Saffir Simpson Hurricane Wind Scale.html
+++ b/Modified Saffir Simpson Hurricane Wind Scale.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Index</title>
+    <title>Modified Saffir-Simpson Hurricane Wind Scale (mSSHWS)</title>
 </head>
 <body>
     <div>
